--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,10 @@
 			"app/database/migrations",
 			"app/database/seeds",
 			"app/tests/TestCase.php"
-		]
+		],
+        "psr-0": {
+            "Scheduler": "app/lib"
+        }
 	},
 	"scripts": {
 		"post-install-cmd": [
