--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
 	"keywords": ["framework", "laravel"],
 	"license": "MIT",
 	"require": {
-		"laravel/framework": "4.0.*"
+		"laravel/framework": "4.0.*",
+        "vamsiikrishna/when": "dev-master"
 	},
 	"autoload": {
 		"classmap": [
